# LS24_IR_Zappe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  checklist.txt  eval.txt  requirements.txt
data/: 7th Dearlanska Brigada.json  A.json  Aamad.json  Aard (strom).json  Aard.json  Abb Yarra.json  Abdank.json  Abigail.json  Abrad.json  Adalatte.json  Adalbert z Mariboru.json  Adalia.json  Adam.json  Adamuv dum.json  Adda z Temerie.json  Adda.json  Adela Marta.json  Adela.json  Adon z Carreasu.json  Adrianna.json  Aedd Gynvael.json  Aedireen.json  Aedirn.json  Aelirenn.json  Aen Elle.json  Aen Saevherne.json  Aen Seidhe.json  Aen Undod.json  Aenyeweddien.json  Aerondight.json  Aether.json  Agloval.json  Agnes z Glanville.json  Aguara.json  Aiden.json  Aillil aep Ceallach.json  Ain Soph Aur.json  Aine Dermott.json  Akademie Ban Ard.json  Alabastrova figurka.json  (+1889 more)
lib/stem/scripts/koncovky_sklonovani/podstjm/: Šablona Vzor_Francie.htm  Šablona Vzor_analgetikum.htm  Šablona Vzor_barva.htm  Šablona Vzor_bojiště.htm  Šablona Vzor_euro.htm  Šablona Vzor_hoch.htm  Šablona Vzor_hrad.htm  Šablona Vzor_husita.htm  Šablona Vzor_hříbek.htm  Šablona Vzor_hříbě.htm  Šablona Vzor_jablko.htm  Šablona Vzor_jabloň.htm  Šablona Vzor_jídelna.htm  Šablona Vzor_klika.htm  Šablona Vzor_kost.htm  Šablona Vzor_kočka.htm  Šablona Vzor_kuře.htm  Šablona Vzor_letadlo.htm  Šablona Vzor_ministerstvo.htm  Šablona Vzor_moře.htm  Šablona Vzor_muž.htm  Šablona Vzor_médium.htm  Šablona Vzor_město.htm  Šablona Vzor_mříž.htm  Šablona Vzor_obyvatel.htm  Šablona Vzor_občan.htm  Šablona Vzor_okno.htm  Šablona Vzor_ostrov.htm  Šablona Vzor_otec.htm  Šablona Vzor_pán.htm  Šablona Vzor_pára.htm  Šablona Vzor_píseň.htm  Šablona Vzor_předseda.htm  Šablona Vzor_redaktor.htm  Šablona Vzor_růže.htm  Šablona Vzor_sameček.htm  Šablona Vzor_slovník.htm  Šablona Vzor_soudce.htm  Šablona Vzor_stavení.htm  Šablona Vzor_stroj.htm  (+7 more)
lib/stem/scripts/koncovky_sklonovani/pridjm/: Šablona Vzor_bystrý.htm  Šablona Vzor_bývalý.htm  Šablona Vzor_drahý.htm  Šablona Vzor_hladký.htm  Šablona Vzor_jarní.htm  Šablona Vzor_levý.htm  Šablona Vzor_matčin.htm  Šablona Vzor_mladý.htm  Šablona Vzor_otcův.htm  Šablona Vzor_starý.htm  Šablona Vzor_suchý.htm  Šablona Vzor_vesnický.htm  Šablona Vzor_vysoký.htm  Šablona Vzor_český.htm
lib/stem/scripts/koncovky_sklonovani/slovesa/: Šablona Vzor_brát.htm  Šablona Vzor_chodit.htm  Šablona Vzor_kryt.htm  Šablona Vzor_kupovat.htm  Šablona Vzor_mazat.htm  Šablona Vzor_minout.htm  Šablona Vzor_nest.htm  Šablona Vzor_pect.htm  Šablona Vzor_prosit.htm  Šablona Vzor_rušit.htm  Šablona Vzor_sázet.htm  Šablona Vzor_tisknout.htm  Šablona Vzor_tnout.htm  Šablona Vzor_trpět.htm  Šablona Vzor_třít.htm  Šablona Vzor_volat.htm  Šablona Vzor_vozit.htm  Šablona Vzor_čistit.htm
src/: DataLoader.cpp  DataLoader.h  Document.h  IndexHandler.cpp  IndexHandler.h  Indexer.cpp  Indexer.h  Main.cpp  Preprocessor.cpp  Preprocessor.h  PyHandler.cpp  PyHandler.h  TF_IDF.h  main.cpp
src/cpp_indexer/: DataLoader.cpp  DataLoader.h  Document.h  IndexHandler.cpp  IndexHandler.h  Indexer.cpp  Indexer.h  Main.cpp  TF_IDF.h  const.h
src/cpp_indexer/data/: Document.h  FileBasedLoader.cpp  FileBasedLoader.h  Preprocessor.cpp  Preprocessor.h
src/cpp_indexer/eval/: DataUtils.cpp  DataUtils.h  Main.cpp
src/cpp_indexer/gui/: GUI.cpp  GUI.h
src/cpp_indexer/index/: IndexHandler.cpp  IndexHandler.h  Indexer.cpp  Indexer.h  TF_IDF.cpp  TF_IDF.h
src/py_crawler/: crawler.py
src/py_lang_detect/: lang_detector.py  lang_detector_text.py
